force-app/integration-logs-framework/objects/IntegrationEvent__e/IntegrationEvent__e.object-meta.xml
<CustomObject>
    <description>Platform Event for integration events - publishes immediately even on rollback</description>
    <label>Integration Event</label>
    <pluralLabel>Integration Events</pluralLabel>
</CustomObject>