force-app/integration-logs-framework/objects/IntegrationEvent__e/fields/Context__c.field-meta.xml
<CustomField>
    <fullName>Context__c</fullName>
    <description>Context where the error occurred (class.method)</description>
    <label>Context</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>