force-app/integration-logs-framework/objects/IntegrationEvent__e/fields/CorrelationId__c.field-meta.xml
<CustomField>
    <fullName>CorrelationId__c</fullName>
    <description>Correlation identifier propagated across integration hops.</description>
    <label>Correlation Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>