force-app/integration-logs-framework/objects/IntegrationEvent__e/fields/EventMessage__c.field-meta.xml
<CustomField>
    <fullName>EventMessage__c</fullName>
    <description>Event message with an explanation of what triggered the event</description>
    <label>Event Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>