force-app/integration-logs-framework/objects/IntegrationEvent__e/fields/IntegrationCode__c.field-meta.xml
<CustomField>
    <fullName>IntegrationCode__c</fullName>
    <description>Integration definition code referencing metadata (e.g., HTTP01, SAP-ORDERS).</description>
    <label>Integration Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>