force-app/integration-logs-framework/objects/IntegrationEvent__e/fields/JobId__c.field-meta.xml
<CustomField>
    <fullName>JobId__c</fullName>
    <description>Unique identifier for batch job or async execution</description>
    <label>Job Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>