force-app/integration-logs-framework/objects/IntegrationEvent__e/fields/ObservationType__c.field-meta.xml
<CustomField>
    <fullName>ObservationType__c</fullName>
    <description
  >Neutral fact-based observation type (e.g., REQUEST_DISPATCHED, RESPONSE_RECEIVED).</description>
    <label>Observation Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>