force-app/integration-logs-framework/objects/IntegrationEvent__e/fields/OccurredAt__c.field-meta.xml
<CustomField>
    <fullName>OccurredAt__c</fullName>
    <description>Timestamp when the observation occurred.</description>
    <label>Occurred At</label>
    <type>DateTime</type>
</CustomField>