force-app/integration-logs-framework/objects/IntegrationEvent__e/fields/ParentEventId__c.field-meta.xml
<CustomField>
    <fullName>ParentEventId__c</fullName>
    <description>Optional parent event identifier for hierarchical correlation.</description>
    <label>Parent Event Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>