force-app/integration-logs-framework/objects/IntegrationEvent__e/fields/PayloadId__c.field-meta.xml
<CustomField>
    <fullName>PayloadId__c</fullName>
    <description>Unique identifier for the payload being processed</description>
    <label>Payload Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>