force-app/integration-logs-framework/objects/IntegrationEvent__e/fields/Processed__c.field-meta.xml
<CustomField>
    <fullName>Processed__c</fullName>
    <description>Flag indicating if event represents a processed/success state (true) or error state (false)</description>
    <label>Processed</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>