force-app/integration-logs-framework/objects/IntegrationEvent__e/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Source system of the integration</description>
    <label>Source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>